[tool.poetry]
name = "cdk-invalid-char"
version = "0.1.0"
description = ""
authors = ["Daniel Evans <daniel.evans@satellitevu.com>"]
readme = "README.md"
packages = [{include = "cdk_invalid_char"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:The `Row.keys\(\)` method is deprecated to mimic SQLAlchemy behaviour:DeprecationWarning',
    'ignore:distutils Version classes are deprecated. Use packaging\.version instead\.:DeprecationWarning',
    'ignore:There is no current event loop:DeprecationWarning',
]
