[tool.poetry]
name = "image_stacking_poc"
version = "0.0.0"
description = "image-stacking-poc"
license = "PROPRIETARY"
authors = []
packages = [{include = "image_stacking_poc"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
